--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+async-trait = "0.1.88"
+env_logger = "0.11.8"
+log = "0.4.27"
+pingora = "0.5.0"
+pingora-core = "0.5.0"
+pingora-limits = "0.5.0"
+pingora-load-balancing = "0.5.0"
+pingora-proxy = "0.5.0"
