--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,16 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-async-trait = "0.1.88"
-env_logger = "0.11.8"
-log = "0.4.27"
-pingora = "0.5.0"
-pingora-core = "0.5.0"
-pingora-limits = "0.5.0"
-pingora-load-balancing = "0.5.0"
-pingora-proxy = "0.5.0"
+acme2 = "0.5.1"
+axum = "0.8.4"
+axum-reverse-proxy = { version = "1.0.3", features = ["tls"] }
+axum-server = "0.7.2"
+http = "1.3.1"
+rand = "0.9.1"
+reqwest = { version = "0.12", features = ["json"] }
+rustls = "0.23.29"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.141"
+tokio = { version = "1.46.1", features = ["full"] }
+tokio-rustls = "0.26.2"
+tower_governor = "0.7.0"
