--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2024"
 acme2 = "0.5.1"
 axum = "0.8.4"
 axum-reverse-proxy = { version = "1.0.3", features = ["tls"] }
-axum-server = "0.7.2"
+axum-server = { version = "0.7.2", features = ["tls-rustls"] }
+dotenv = "0.15.0"
 http = "1.3.1"
+openssl-sys = "0.9.109"
 rand = "0.9.1"
 reqwest = { version = "0.12", features = ["json"] }
 rustls = "0.23.29"
@@ -17,3 +19,4 @@ serde_json = "1.0.141"
 tokio = { version = "1.46.1", features = ["full"] }
 tokio-rustls = "0.26.2"
 tower_governor = "0.7.0"
+tower = "0.5.1"
