--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,11 @@ tokio = { version = "1.46.1", features = ["full"] }
 tokio-rustls = "0.26.2"
 tower_governor = "0.7.0"
 tower = "0.5.1"
+# 日志记录
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
+# Prometheus 监控
+axum-prometheus = "0.7.0"
+prometheus = "0.13"
+metrics = "0.23"
+metrics-exporter-prometheus = "0.15"
