--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ axum-reverse-proxy = { version = "1.0.3", features = ["tls"] }
 axum-server = { version = "0.7.2", features = ["tls-rustls"] }
 dotenv = "0.15.0"
 http = "1.3.1"
+hyper = { version = "0.14", features = ["full"] }
 openssl-sys = "0.9.109"
 rand = "0.9.1"
 reqwest = { version = "0.12", features = ["json"] }
@@ -18,8 +19,9 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.141"
 tokio = { version = "1.46.1", features = ["full"] }
 tokio-rustls = "0.26.2"
-tower_governor = "0.7.0"
 tower = "0.5.1"
+tower-http = { version = "0.5.0", features = ["full"] }
+tower_governor = "0.7.0"
 # 日志记录
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
