--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-acme2 = "0.5.1"
 axum = "0.8.4"
 axum-reverse-proxy = { version = "1.0.3", features = ["tls"] }
 axum-server = { version = "0.7.2", features = ["tls-rustls"] }
@@ -30,3 +29,6 @@ axum-prometheus = "0.7.0"
 prometheus = "0.13"
 metrics = "0.23"
 metrics-exporter-prometheus = "0.15"
+# ACME证书自动更新
+rustls-acme = { version = "0.14", features = ["tokio", "axum"] }
+futures = "0.3"
