--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ target
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+*.pem
+
 
 # Added by cargo
 
