--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,15 +5,11 @@ edition = "2024"
 
 [dependencies]
 axum = "0.8.4"
-axum-reverse-proxy = { version = "1.0.3", features = ["tls"] }
 axum-server = { version = "0.7.2", features = ["tls-rustls"] }
-dotenv = "0.15.0"
 http = "1.3.1"
-hyper = { version = "0.14", features = ["full"] }
-openssl-sys = "0.9.109"
-rand = "0.9.1"
-reqwest = { version = "0.12", features = ["json"] }
-rustls = "0.23.29"
+
+reqwest = { version = "0.12.22", features = ["json"] }
+
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.141"
 tokio = { version = "1.46.1", features = ["full"] }
@@ -27,4 +23,7 @@ axum-prometheus = "0.7.0"
 prometheus = "0.13"
 metrics = "0.23"
 metrics-exporter-prometheus = "0.15"
+dotenvy = "0.15.7"
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
 
