--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ axum = "0.8.4"
 axum-server = { version = "0.7.2", features = ["tls-rustls"] }
 http = "1.3.1"
 
-reqwest = { version = "0.12.22", features = ["json"] }
+reqwest = { version = "0.12.22", features = ["json","brotli","gzip","http2", "rustls-tls"], default-features = false }
+rustls = { version = "0.23", features = ["ring","logging","tls12"], default-features = false }
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.141"
