--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ tokio-rustls = "0.26.2"
 tower = "0.5.1"
 tower-http = { version = "0.5.0", features = ["full"] }
 tower_governor = "0.7.0"
+sha2 = "0.10"
 
 # Prometheus 监控
 axum-prometheus = "0.7.0"
@@ -27,4 +28,3 @@ metrics-exporter-prometheus = "0.15"
 dotenvy = "0.15.7"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
-
