--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "zeno-gateway"
 version = "0.1.0"
 edition = "2024"
+license = "MIT"
 
 [dependencies]
 axum = "0.8.4"
@@ -19,6 +20,7 @@ tower = "0.5.1"
 tower-http = { version = "0.5.0", features = ["full"] }
 tower_governor = "0.7.0"
 sha2 = "0.10"
+moka = "0.12.11"
 
 # Prometheus 监控
 axum-prometheus = "0.7.0"
@@ -28,3 +30,5 @@ metrics-exporter-prometheus = "0.15"
 dotenvy = "0.15.7"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
+
+
