--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ tower-http = { version = "0.5.0", features = ["full"] }
 tower_governor = "0.7.0"
 sha2 = "0.10"
 moka = "0.12.11"
+sqlx = { version = "0.8.6", features = ["runtime-tokio","tls-rustls", "postgres", "uuid", "chrono", "json"] }
 
 # Prometheus 监控
 axum-prometheus = "0.7.0"
