--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,16 +20,20 @@ tower = "0.5.1"
 tower-http = { version = "0.5.0", features = ["full"] }
 tower_governor = "0.7.0"
 sha2 = "0.10"
-moka = "0.12.11"
+moka = { version = "0.12.11", features = ["future"] }
 sqlx = { version = "0.8.6", features = ["runtime-tokio","tls-rustls", "postgres", "uuid", "chrono", "json"] }
 
-# Prometheus 监控
-axum-prometheus = "0.7.0"
-prometheus = "0.13"
-metrics = "0.23"
-metrics-exporter-prometheus = "0.15"
 dotenvy = "0.15.7"
-tracing = "0.1.41"
-tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
+prost = "0.14.1"
+prost-types = "0.14.1"
+tonic = { version = "0.14.2", features = ["transport"] }
+tracing = "0.1"
+tracing-subscriber = "0.3"
+anyhow = "1.0"
+tonic-prost = "0.14.2"
+
+[build-dependencies]
+tonic-prost-build = "0.14.2"
+
 
 
