--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,35 +5,34 @@ edition = "2024"
 license = "MIT"
 
 [dependencies]
-axum = "0.8.4"
-axum-server = { version = "0.7.2", features = ["tls-rustls"] }
-http = "1.3.1"
-
+# 核心依赖
+tokio = { version = "1.46.1", features = ["full"] }
+tonic = { version = "0.14.2", features = ["transport", "_tls-any"] }
+tonic-prost = "0.14.2"
 reqwest = { version = "0.12.22", features = ["json","brotli","gzip","http2", "rustls-tls"], default-features = false }
-rustls = { version = "0.23", features = ["ring","logging","tls12"], default-features = false }
-
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.141"
-tokio = { version = "1.46.1", features = ["full"] }
+tracing = "0.1"
+tracing-subscriber = "0.3"
+hyper = { version = "0.14", features = ["server", "http1", "http2", "runtime"] }
+futures-util = "0.3"
+rustls = "0.23"
+rustls-pemfile = "2.1"
 tokio-rustls = "0.26.2"
-tower = "0.5.1"
-tower-http = { version = "0.5.0", features = ["full"] }
-tower_governor = "0.7.0"
-sha2 = "0.10"
-moka = { version = "0.12.11", features = ["future"] }
-sqlx = { version = "0.8.6", features = ["runtime-tokio","tls-rustls", "postgres", "uuid", "chrono", "json"] }
 
+# 数据库和缓存
+sqlx = { version = "0.8.6", features = ["runtime-tokio","tls-rustls", "postgres", "uuid", "chrono", "json"] }
+moka = { version = "0.12.11", features = ["future"] }
+
+# 工具类
 dotenvy = "0.15.7"
 prost = "0.14.1"
 prost-types = "0.14.1"
-tonic = { version = "0.14.2", features = ["transport"] }
-tracing = "0.1"
-tracing-subscriber = "0.3"
 anyhow = "1.0"
-tonic-prost = "0.14.2"
+thiserror = "1.0"
+jsonwebtoken = { version = "10.2.0", features = ["use_pem", "rust_crypto"] }
+tower_governor = "0.8.0"
+tower =  { version = "0.5.2", features = ["full"] } 
 
 [build-dependencies]
 tonic-prost-build = "0.14.2"
-
-
-
