--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ license = "MIT"
 tokio = { version = "1.46.1", features = ["full"] }
 tonic = { version = "0.14.2", features = ["transport", "_tls-any"] }
 tonic-prost = "0.14.2"
+tonic-async-interceptor = "0.14.1"
 reqwest = { version = "0.12.22", features = ["json","brotli","gzip","http2", "rustls-tls"], default-features = false }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.141"
@@ -30,9 +31,11 @@ prost = "0.14.1"
 prost-types = "0.14.1"
 anyhow = "1.0"
 thiserror = "1.0"
-jsonwebtoken = { version = "10.2.0", features = ["use_pem", "rust_crypto"] }
 tower_governor = "0.8.0"
 tower =  { version = "0.5.2", features = ["full"] } 
+dashmap = "6.1.0"
+once_cell = "1.21.3"
+governor = "0.10.2"
 
 [build-dependencies]
 tonic-prost-build = "0.14.2"
